menu overflow fix && ranking file

--- a/style.css
+++ b/style.css
@@ -197,6 +197,7 @@ body
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 50px;
+    overflow: auto;
 }
 #settings,
 #level
